syntax = "proto3";
package summa.proto;


// Service
service BeaconApi {
  rpc attach_index (AttachIndexRequest) returns (AttachIndexResponse) {}
  rpc get_index_token (GetIndexTokenRequest) returns (GetIndexTokenResponse) {}
}

message AttachIndexRequest {
  string index_config = 1;
  string data_path = 2;
}

message AttachIndexResponse {}

message GetIndexTokenRequest {
  string index_name = 1;
}

message GetIndexTokenResponse {
  string index_config = 1;
  string ipfs_multihash = 2;
}
