syntax = "proto3";
package summa;

import "summa/proto/consumer.proto";
import "summa/proto/index.proto";

service ConsumerApi {
  rpc create_consumer (CreateConsumerRequest) returns (CreateConsumerResponse) {}
  rpc get_consumer (GetConsumerRequest) returns (GetConsumerResponse) {}
  rpc get_consumers (GetConsumersRequest) returns (GetConsumersResponse) {}
  rpc delete_consumer (DeleteConsumerRequest) returns (DeleteConsumerResponse) {}
}

message CreateConsumerRequest {
  repeated string bootstrap_servers = 1;
  string group_id = 2;
  string index_name = 3;
  string consumer_name = 4;
  repeated string topics = 5;
  uint32 threads = 6;
}
message CreateConsumerResponse {}
message DeleteConsumerRequest {
  string consumer_name = 1;
}
message DeleteConsumerResponse {}
message GetConsumerRequest {
  string consumer_name = 1;
}
message GetConsumerResponse {
  Consumer consumer = 1;
}
message GetConsumersRequest {}
message GetConsumersResponse {
  repeated Consumer consumers = 1;
}
